--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -3,6 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <TextView
+        android:id="@+id/txtNewsContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="txtUserName" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 
 </LinearLayout>
