--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,17 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_post"
+        android:icon="@drawable/post"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="Đăng Bài"/>
+    <item
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/refresh"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="Cập Nhật"/>
 
 </menu>
